@@ -24,6 +24,7 @@
 5. Last.fm replies are XML, so decode these properly!
 6. Don't log scrobbler session key to debug file.
 7. Remove extra margin in podcast settings dialog.
+8. When adjusting track numbers in tag editor, start from first actual track.
 
 1.4.0
 -----
